added new scss-files

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,7 @@
 @import "colors";
 @import "ui-mixins";
+@import "./sections/section2";
+@import "./sections/section4";
 @import url(https://fonts.googleapis.com/css?family=Julius+Sans+One);
 
 @font-face {
@@ -161,355 +163,6 @@ section {
         font-size: 52px;
         margin: auto;
         text-align: center;
-      }
-    }
-  }
-
-  .section2 {
-
-    .modal {
-      align-items: center;
-      background: $backgroundWindow;
-      border-radius: 20px;
-      border: 1px solid #333;
-      color: $mainBackground;
-      display: none;
-      flex-direction: column;
-      justify-content: space-around;
-      margin: 0 auto;
-      min-height: 40vh;
-      padding: 10px;
-      position: relative;
-      top: 35vh;
-      transition: margin-top 1s ease-in;
-      width: 30%;
-      z-index: 9999;
-
-      .form-title-wrapper {
-        color: $mainBackground;
-        font-size: 2rem;
-        font-weight: 700;
-        text-align: center;
-        width: 100%;
-      }
-
-      .form-wrapper {
-        display: flex;
-        flex-direction: column;
-        min-height: 22vh;
-        width: 100%;
-
-        .form-body {
-          align-content: center;
-          display: flex;
-          flex-direction: column;
-
-          &-login, &-password {
-            background-color: $inputBackground;
-            border-radius: 5px;
-            border: none;
-            box-sizing: border-box;
-            display: block;
-            margin: auto auto 10px auto;
-            min-height: 40px;
-            width: 80%;
-          }
-
-          span {
-            color: $error;
-            margin: auto;
-            display: block;
-            font-size: 10px;
-            text-align: center;
-            text-shadow: none;
-
-            &:hover {
-              cursor: default;
-            }
-          }
-        }
-
-        .btn-submit {
-          @include submit-btn(40px, 80%);
-        }
-      }
-    }
-
-    h1 {
-      position: absolute;
-      margin: 0;
-      z-index: 1;
-    }
-
-    .service-buttons {
-      display: flex;
-      position: absolute;
-      flex-direction: row;
-      justify-content: flex-end;
-      width: 100%;
-
-      .save-doc, .print {
-        @include submit-btn(50px, 100px);
-        display: flex;
-        justify-content: flex-end;
-        margin: 0;
-        z-index: 1;
-      }
-
-      .save-doc {
-        background: center / contain no-repeat url("../media/cloud-arrow-down.svg");
-        margin-right: 5px;
-      }
-
-      .print {
-        background: center / contain no-repeat url("../media/printer.svg");
-      }
-    }
-
-    .work-wrapper {
-      height: calc(100vh - 2px);
-      left: 434px;
-      margin: auto 0 auto auto;
-      overflow: hidden;
-      padding-top: 90px;
-      position: absolute;
-      width: calc(100% - 434px);
-      z-index: 0;
-
-      .client-data-header {
-        display: flex;
-        font-size: 25px;
-        letter-spacing: 2px;
-        margin-bottom: 20px;
-        padding: 0 40px 0 20px;
-        position: sticky;
-
-        .client-name {
-          margin: auto;
-          width: 80%;
-          padding-left: 20px;
-        }
-
-        .numeric-data {
-          display: flex;
-          flex-direction: row;
-          font-size: 18px;
-          width: 20%;
-
-          .active-objects-header, .inactive-objects-header {
-            display: flex;
-            flex: 0 0 50%;
-            font-size: 14px;
-            margin: auto;
-            text-align: center;
-          }
-        }
-      }
-
-      .work-data {
-        display: flex;
-        flex-direction: column;
-        margin-top: 20px;
-        max-height: 95%;
-        overflow-y: scroll;
-        padding: 0 20px;
-
-        .client-data {
-          border-radius: 5px;
-          display: flex;
-          flex-direction: row;
-          font-size: 18px;
-          font-weight: 900;
-          justify-content: space-evenly;
-          margin-bottom: 20px;
-          margin-top: 10px;
-          min-height: 60px;
-          padding-left: 20px;
-          width: 100%;
-
-          &:hover {
-            background-color: $backgroundWindow;
-            color: $mainBackground;
-            transition: background-color 0.8s ease-in-out;
-          }
-
-          .client-data-label {
-            align-items: flex-start;
-            display: flex;
-            justify-content: flex-start;
-            min-width: 80%;
-            //padding-left: 20px;
-
-            a {
-              margin: auto auto auto 0;
-              text-align: left;
-            }
-          }
-
-          &-buttons {
-            display: flex;
-            flex-direction: row;
-            flex: 0 0 auto;
-            justify-content: space-around;
-            min-width: 200px;
-            width: 20%;
-
-            .active-objects, .inactive-objects {
-              align-items: center;
-              border-radius: 15px;
-              display: flex;
-              flex: 0 0 45%;
-              height: 100%;
-              justify-content: center;
-              text-align: center;
-
-              &:hover {
-                cursor: pointer;
-                border: 2px solid;
-              }
-
-              &:active, &:focus {
-                outline: none;
-              }
-            }
-
-            .active-objects {
-              background-color: $active;
-
-              &:hover {
-                border-color: $salad;
-              }
-
-              &:active {
-                background-color: $salad;
-              }
-            }
-
-            .inactive-objects {
-              background-color: $inactive;
-
-              &:hover {
-                background-color: $inactive;
-                border-color: $inactive2;
-              }
-
-              &:active {
-                background-color: $inactive2;
-              }
-            }
-          }
-
-          a {
-            letter-spacing: 1px;
-            text-shadow: none;
-            text-decoration: none;
-            opacity: 1;
-          }
-        }
-      }
-    }
-  }
-
-  .section4 {
-    @-webkit-keyframes headAnim{
-      0%{ top:0px; }
-      50%{ top:10px; }
-      100% { top:0px;}
-    }
-
-    @-webkit-keyframes bodyAnim{
-      0%{ top:-5px; }
-      50%{ top:10px; }
-      100% { top:-5px;}
-    }
-
-    @-webkit-keyframes fontAnim{
-      0%{ width:0; }
-      16%{ width:8ch; }
-      32%{ width:9ch; }
-      48%{ width:10ch; }
-      64%{ width:11ch; }
-      80%{ width:12ch; }
-      100% { width:15ch;}
-    }
-
-    .container {
-
-      .circ {
-        -webkit-backface-visibility: hidden;
-        margin: 60px auto;
-        width: 180px; height: 180px;
-        border-radius: 0 0 50px 50px;
-        position: relative;
-        z-index: 1;
-        left: 0; top: 20%;
-        overflow: hidden;
-
-        .load {
-          position: absolute;
-          width: 7ch; height: 32px;
-          text-align: left;
-          line-height: 32px;
-          margin: -10px auto;
-          -webkit-font-smoothing: antialiased;
-          font-family: 'Julius Sans One', sans-serif;
-          font-size:28px;
-          font-weight:400;
-          color:rgba(240,220,220,1);
-          left: 2%; top: 5%;
-          -webkit-animation:fontAnim 3.75s infinite;
-          -webkit-animation-timing-function:ease-out;
-          word-wrap: break-word;
-          display:block;
-          overflow: hidden;
-        }
-
-        .hands {
-          -webkit-backface-visibility: hidden;
-          margin-top: 140px;
-          width: 120px;height: 120px;
-          position: absolute;
-          //background-color: blue;
-          border-radius:20px;
-          box-shadow:-1px -4px 0px 0px rgba(240,220,220,1);
-          -webkit-transform:rotate(45deg);
-          top:75%;left: 16%;
-          z-index: 1;
-          -webkit-animation:bodyAnim 1.5s infinite alternate;
-          -webkit-animation-timing-function:ease-out;
-        }
-
-        .body {
-          position: relative;
-          margin: 90px auto;
-          width: 140px; height: 120px;
-          //background-color: blue;
-          border-radius: 50px/25px ;
-          box-shadow: inset -5px 2px 0px 0px rgba(240,220,220,1);
-          -webkit-animation:bodyAnim 1.5s infinite alternate;
-          -webkit-animation-timing-function:ease-out;
-        }
-
-        .head {
-          -webkit-backface-visibility: hidden;
-          position: relative;
-          margin: -250px auto;
-          width: 80px; height: 80px;
-          background-color: $mainBackground;
-          border-radius:50px;
-          box-shadow: inset -4px 2px 0px 0px rgba(240,220,220,1);
-          -webkit-animation:headAnim 1.5s infinite alternate;
-          -webkit-animation-timing-function:ease-out;
-
-          .eye {
-            width: 20px; height: 8px;
-            background-color: rgba(240,220,220,1);
-            border-radius:0 0 20px 20px;
-            position: relative;
-            left: 10px; top: 40px;
-            box-shadow:  40px 0 0 0 rgba(240,220,220,1);
-          }
-        }
       }
     }
   }
