--- a/src/styles/sections/section2.scss
+++ b/src/styles/sections/section2.scss
@@ -112,7 +112,7 @@
   .work-wrapper {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 2px);
+    height: calc(100vh - 22px);
     left: 434px;
     margin: auto 0 auto auto;
     overflow: hidden;
@@ -123,10 +123,12 @@
 
     .client-data-header {
       display: flex;
+      margin: 0 0 20px;
+      flex-grow: 0;
+      padding: 0 20px;
       font-size: 25px;
       letter-spacing: 2px;
-      margin-bottom: 20px;
-      padding: 0 40px 0 20px;
+      padding: 0 20px 0 20px;
       position: sticky;
 
       .client-name {
@@ -138,6 +140,7 @@
       .numeric-data {
         display: flex;
         flex-direction: row;
+        padding-right: 20px;
         font-size: 18px;
         width: 20%;
 
@@ -145,6 +148,7 @@
         .inactive-objects-header {
           display: flex;
           flex: 0 0 50%;
+          justify-content: center;
           font-size: 14px;
           margin: auto;
           text-align: center;
@@ -155,8 +159,8 @@
     .work-data {
       display: flex;
       flex-direction: column;
+      flex-grow: 1;
       margin-top: 20px;
-      max-height: 95%;
       overflow-y: scroll;
       padding: 0 20px;
 
@@ -188,7 +192,6 @@
           display: flex;
           justify-content: flex-start;
           min-width: 80%;
-          //padding-left: 20px;
 
           a {
             margin: auto auto auto 0;
@@ -284,6 +287,7 @@
           display: flex;
           flex-direction: column;
           flex-direction: flex-start;
+          height: 100%;
           width: 100%;
 
           .list-label {
